# AudioIF_Example

./: .gitignore  LICENSE  README.md
cpp/usbps/: LICENSE  UsbData.hpp  UsbDeviceDescriptor.hpp  UsbIntrrupt.hpp  UsbPs.cpp  UsbPs.h  UsbPsImpl.h
ip/SWPD_Control/: README.md  component.xml
ip/SWPD_Control/drivers/SWPDControl_v1_0/src/: CMakeLists.txt  Makefile  SWPDPeripheral.cpp  SWPDPeripheral.h  SWPDReg.h  xswpd.h
ip/SWPD_Control/hdl/: Clockgen.sv  Register.sv  SWPDControl_v1_0.sv  Serial.sv
ip/SWPD_Control/xgui/: SWPDControl_v1_0.tcl
ip/midi/bus2midi/: README.md  component.xml
ip/midi/bus2midi/hdl/: Bus2MIDI_v1_0.sv  Selector.sv  Uart.sv  UartFetch.sv
ip/midi/hdl/: Interfaces.sv
ip/midi/if/: MidiBus.xml  MidiBus_rtl.xml  MidiClock.xml  MidiClock_rtl.xml
ip/midi/midi/: README.md  component.xml
ip/midi/midi/drivers/MIDI_v1_0/src/: CMakeLists.txt  MIDIPeripheral.cpp  MIDIPeripheral.h  MIDI_selftest.cpp  Makefile  xmidi.h
ip/midi/midi/hdl/: BufInterface.sv  MIDI_v1_0.sv  MIDI_v1_0_S_AXI.sv
ip/midi/midi/xgui/: MIDI_v1_0.tcl
ip/midi/midi2bus/: README.md  component.xml
ip/midi/midi2bus/hdl/: MIDI2Bus_v1_0.sv  MidiBuilder.sv  SysExMediate.sv  (+1 more)
ip/midi/midiclock/: .gitignore  component.xml
midi_pl_ps_standalone/: Readme.md  create_bd.tcl
midi_pl_ps_standalone/cpp/: lscript.ld  main.cpp
midi_pl_standalone/: Readme.md  create_bd.tcl
midi_pl_standalone/hdl/: transpose_midi.v
midi_usb/: Readme.md  create_bd.tcl
midi_usb/cpp/: common.h  descriptor.cpp  descriptor.h  lscript.ld  main.cpp  ring_buffer.h  usb_midi.cpp  usb_midi.h
swpd_pl_ps_standalone/: Readme.md  create_bd.tcl
swpd_pl_ps_standalone/cpp/: main.cpp
swpd_pl_ps_standalone/vivado/: .gitignore
(+17 files in other folders)
