cmake_minimum_required(VERSION 3.15)
project(SWPDControl)

find_package(common)
collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES SWPDPeripheral.cpp)
collect (PROJECT_LIB_SOURCES xswpd_g.c)
collect (PROJECT_LIB_HEADERS SWPDPeripheral.h)
collect (PROJECT_LIB_HEADERS SWPDReg.h)
collect (PROJECT_LIB_HEADERS xswpd.h)
collector_list (DRIVER_SRC PROJECT_LIB_SOURCES)
collector_list (DRIVER_HEADER PROJECT_LIB_HEADERS)
file(COPY ${DRIVER_HEADER} DESTINATION ${CMAKE_BINARY_DIR}/include)
add_library(SWPDControl STATIC ${DRIVER_SRC})
set_target_properties(SWPDControl PROPERTIES LINKER_LANGUAGE CXX)
