cmake_minimum_required(VERSION 3.15)
project(MIDI)

find_package(common)
collector_create (PROJECT_LIB_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}")
collector_create (PROJECT_LIB_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}")
include_directories(${CMAKE_BINARY_DIR}/include)
collect (PROJECT_LIB_SOURCES MIDIPeripheral.cpp)
collect (PROJECT_LIB_SOURCES xmidi_g.c)
collect (PROJECT_LIB_HEADERS MIDIPeripheral.h)
collect (PROJECT_LIB_HEADERS xmidi.h)
collector_list (DRIVER_SRC PROJECT_LIB_SOURCES)
collector_list (DRIVER_HEADER PROJECT_LIB_HEADERS)
file(COPY ${DRIVER_HEADER} DESTINATION ${CMAKE_BINARY_DIR}/include)
add_library(MIDI STATIC ${DRIVER_SRC})
set_target_properties(MIDI PROPERTIES LINKER_LANGUAGE CXX)
